# mlp

./: .gitignore  Makefile  README.md  config.json  pyproject.toml  requirements.txt
dlf/: README.md  Tensor.py  dataset.py  model_mlp.py  nn.py  optimizer.py  plot.py  tensor.py
docs/: commands.md
examples/: dataset.py  inference_mlp.py  mlp.py  model_mlp.py  test.py  test.py.bak  tiny.py  train_mlp.py
