[project]
name = "dlf"
version = "0.1.0"
description = "deep learning framework"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "polars",
    "matplotlib",
    "safetensors",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["dlf"]

[tool.setuptools.package-data]
dlf = ["README.md"]

[tool.ruff]
line-length = 250

[tool.ruff.format]
skip-magic-trailing-comma = true
